2016-04-02         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_printf): If the redirection is two way but the
	fp is NULL, it means we're writing to the closed write-end of
	a two-way pipe. Issue a fatal error message.
	(do_print): Ditto.
	(do_print_rec): Ditto.
	* io.c (do_getline_redir): Same thing for reading from a closed
	read end of a two-way pipe. Fatal error.
	* NEWS: Updated.

2016-03-14         Arnold D. Robbins     <arnold@skeeve.com>

	* io.c (socketopen): For SOCK_DGRAM, set read_len to sizeof
	remote_addr. Makes UDP more or less work again. 
	Thanks to Juergen Kahrs for the fix.

2016-03-10         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_system): Further improvements. Catch core dump
	flag.

2016-03-11         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_system): Improve return values of system().

2016-03-08         Arnold D. Robbins     <arnold@skeeve.com>

	* profile.c (print_instruction): Fix duplicate case not caught
	by TinyCC. Grrr.

2016-03-07         Arnold D. Robbins     <arnold@skeeve.com>

	* profile.c (print_instruction): Further improvements in
	instruction dump, especially for when pretty-printing.
	* builtin.c (do_system): Augment the logic for the return
	value so that death-by-signal info is available too.

2016-03-03         Arnold D. Robbins     <arnold@skeeve.com>

	* profile.c (pp_list): Unconditionally compute delimlen. Avoids
	compiler warning.

2016-03-02         Arnold D. Robbins     <arnold@skeeve.com>

	* debug.c (print_instruction): Improvements in instruction dump
	for if and else.

2016-02-29         Arnold D. Robbins     <arnold@skeeve.com>

	* profile.c (pp_list): Handle the case of nargs equal to zero.
	Thanks to Hermann Peifer for the report.

2016-02-28         Arnold D. Robbins     <arnold@skeeve.com>

	* profile.c (pprint): Fix copy-paste error in else handling.
	Thanks to Michal Jaegermann for the report.
