@@ -5,6 +5,8 @@
 	* clos1way2.awk, clos1way2.in, clos1way2.ok, clos1way3.awk,
 	clos1way3.ok, clos1way4.awk, clos1way4.ok, clos1way5.awk,
 	clos1way5.ok: New files.
+	* clos1way2.awk: Add call to fflush() to test it too.
+	* clos1way2.ok: Updated after code change.
 
 2016-02-18         Arnold D. Robbins     <arnold@skeeve.com>
 
